--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,33 @@
  *= require_tree .
  *= require_self
  */
+html{ font-family: sans-serif;}
+h1 { color:blue
+    
+} 
+body {background-color:green;
+display:block;
+color:red;
+}
+
+image-1{margin-left:450px;
+    
+}
+
+.mytodolist{
+   margin-left: 550px;
+
+    
+}
+
+ul{
+    list-style:none;
+}
+
+
+
+
+
+
+
+
