--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -7,7 +7,7 @@
                 <li> <input type="checkbox"> feed the cats and dog </li> 
                 <li> <input type="checkbox">clothes shopping. </li>
                 <li> <input type="checkbox">finsh hw assignment.</li>
-                <li > <a href= "show.html" > Make the curriculum</a> </li>
+                <li > <a href= "show.html/1" > Make the curriculum</a> </li>
                 
             </ul>
         </div>
